[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/Maps/test.tres" type="TileSet" id=1]
[ext_resource path="res://src/Maps/Room2.gd" type="Script" id=2]
[ext_resource path="res://src/Objects/Doors/Doors_front.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/Objects/Doors/Player_detector.tscn" type="PackedScene" id=4]

[node name="Room2" type="TileMap"]
tile_set = ExtResource( 1 )
cell_size = Vector2( 16, 16 )
cell_custom_transform = Transform2D( 8, 0, 0, 8, 0, 0 )
collision_layer = 8
collision_mask = 4175
format = 1
tile_data = PoolIntArray( -3669938, 0, 0, -3669937, 1, 0, -3669936, 1, 0, -3669935, 1, 0, -3669934, 1, 0, -3669933, 1, 0, -3669932, 1, 0, -3669931, 1, 0, -3669930, 1, 0, -3669929, 1, 0, -3669928, 1, 0, -3669927, 1, 0, -3669926, 1, 0, -3669925, 1, 0, -3669924, 1, 0, -3669923, 2, 0, -3604406, 0, 0, -3604405, 1, 0, -3604404, 1, 0, -3604403, 1, 0, -3604402, 12, 0, -3604401, 8, 0, -3604400, 8, 0, -3604399, 8, 0, -3604398, 8, 0, -3604397, 8, 0, -3604396, 8, 0, -3604395, 8, 0, -3604394, 8, 0, -3604393, 8, 0, -3604392, 8, 0, -3604391, 8, 0, -3604390, 8, 0, -3604389, 8, 0, -3604388, 8, 0, -3604387, 9, 0, -3604386, 1, 0, -3604385, 1, 0, -3604384, 1, 0, -3604383, 1, 0, -3604382, 1, 0, -3604381, 2, 0, -3538872, 0, 0, -3538871, 1, 0, -3538870, 12, 0, -3538869, 8, 0, -3538868, 8, 0, -3538867, 8, 0, -3538866, 8, 0, -3538865, 8, 0, -3538864, 8, 0, -3538863, 8, 0, -3538862, 8, 0, -3538861, 8, 0, -3538860, 8, 0, -3538859, 8, 0, -3538858, 8, 0, -3538857, 8, 0, -3538856, 8, 0, -3538855, 8, 0, -3538854, 8, 0, -3538853, 8, 0, -3538852, 8, 0, -3538851, 8, 0, -3538850, 8, 0, -3538849, 8, 0, -3538848, 8, 0, -3538847, 8, 0, -3538846, 8, 0, -3538845, 9, 0, -3538844, 1, 0, -3538843, 1, 0, -3538842, 2, 0, -3473337, 0, 0, -3473336, 12, 0, -3473335, 8, 0, -3473334, 8, 0, -3473333, 8, 0, -3473332, 8, 0, -3473331, 8, 0, -3473330, 8, 0, -3473329, 8, 0, -3473328, 8, 0, -3473327, 8, 0, -3473326, 8, 0, -3473325, 8, 0, -3473324, 8, 0, -3473323, 8, 0, -3473322, 8, 0, -3473321, 8, 0, -3473320, 8, 0, -3473319, 8, 0, -3473318, 8, 0, -3473317, 8, 0, -3473316, 8, 0, -3473315, 8, 0, -3473314, 8, 0, -3473313, 8, 0, -3473312, 8, 0, -3473311, 8, 0, -3473310, 8, 0, -3473309, 8, 0, -3473308, 8, 0, -3473307, 8, 0, -3473306, 9, 0, -3473305, 2, 0, -3407803, 0, 0, -3407802, 1, 0, -3407801, 12, 0, -3407800, 8, 0, -3407799, 8, 0, -3407798, 8, 0, -3407797, 8, 0, -3407796, 8, 0, -3407795, 8, 0, -3407794, 8, 0, -3407793, 8, 0, -3407792, 8, 0, -3407791, 8, 0, -3407790, 8, 0, -3407789, 8, 0, -3407788, 8, 0, -3407787, 8, 0, -3407786, 8, 0, -3407785, 8, 0, -3407784, 8, 0, -3407783, 8, 0, -3407782, 8, 0, -3407781, 8, 0, -3407780, 8, 0, -3407779, 8, 0, -3407778, 8, 0, -3407777, 8, 0, -3407776, 8, 0, -3407775, 8, 0, -3407774, 8, 0, -3407773, 8, 0, -3407772, 8, 0, -3407771, 8, 0, -3407770, 8, 0, -3407769, 9, 0, -3407768, 2, 0, -3342268, 0, 0, -3342267, 12, 0, -3342266, 8, 0, -3342265, 8, 0, -3342264, 8, 0, -3342263, 8, 0, -3342262, 8, 0, -3342261, 8, 0, -3342260, 8, 0, -3342259, 8, 0, -3342258, 8, 0, -3342257, 8, 0, -3342256, 8, 0, -3342255, 8, 0, -3342254, 8, 0, -3342253, 8, 0, -3342252, 8, 0, -3342251, 8, 0, -3342250, 8, 0, -3342249, 8, 0, -3342248, 8, 0, -3342247, 8, 0, -3342246, 8, 0, -3342245, 8, 0, -3342244, 8, 0, -3342243, 8, 0, -3342242, 8, 0, -3342241, 8, 0, -3342240, 8, 0, -3342239, 8, 0, -3342238, 8, 0, -3342237, 8, 0, -3342236, 8, 0, -3342235, 8, 0, -3342234, 8, 0, -3342233, 8, 0, -3342232, 9, 0, -3342231, 2, 0, -3276732, 3, 0, -3276731, 8, 0, -3276730, 8, 0, -3276729, 8, 0, -3276728, 8, 0, -3276727, 8, 0, -3276726, 8, 0, -3276725, 8, 0, -3276724, 8, 0, -3276723, 8, 0, -3276722, 8, 0, -3276721, 8, 0, -3276720, 8, 0, -3276719, 8, 0, -3276718, 8, 0, -3276717, 8, 0, -3276716, 8, 0, -3276715, 8, 0, -3276714, 8, 0, -3276713, 8, 0, -3276712, 8, 0, -3276711, 8, 0, -3276710, 8, 0, -3276709, 8, 0, -3276708, 8, 0, -3276707, 8, 0, -3276706, 8, 0, -3276705, 8, 0, -3276704, 8, 0, -3276703, 8, 0, -3276702, 8, 0, -3276701, 8, 0, -3276700, 8, 0, -3276699, 8, 0, -3276698, 8, 0, -3276697, 8, 0, -3276696, 8, 0, -3276695, 9, 0, -3276694, 2, 0, -3211197, 0, 0, -3211196, 12, 0, -3211195, 8, 0, -3211194, 8, 0, -3211193, 8, 0, -3211192, 8, 0, -3211191, 8, 0, -3211190, 8, 0, -3211189, 8, 0, -3211188, 8, 0, -3211187, 8, 0, -3211186, 8, 0, -3211185, 8, 0, -3211184, 8, 0, -3211183, 8, 0, -3211182, 8, 0, -3211181, 8, 0, -3211180, 8, 0, -3211179, 8, 0, -3211178, 8, 0, -3211177, 8, 0, -3211176, 8, 0, -3211175, 8, 0, -3211174, 8, 0, -3211173, 8, 0, -3211172, 8, 0, -3211171, 8, 0, -3211170, 8, 0, -3211169, 8, 0, -3211168, 8, 0, -3211167, 8, 0, -3211166, 8, 0, -3211165, 8, 0, -3211164, 8, 0, -3211163, 8, 0, -3211162, 8, 0, -3211161, 8, 0, -3211160, 8, 0, -3211159, 8, 0, -3211158, 9, 0, -3211157, 2, 0, -3145661, 3, 0, -3145660, 8, 0, -3145659, 8, 0, -3145658, 8, 0, -3145657, 8, 0, -3145656, 8, 0, -3145655, 8, 0, -3145654, 8, 0, -3145653, 8, 0, -3145652, 8, 0, -3145651, 8, 0, -3145650, 8, 0, -3145649, 8, 0, -3145648, 8, 0, -3145647, 8, 0, -3145646, 8, 0, -3145645, 8, 0, -3145644, 8, 0, -3145643, 8, 0, -3145642, 8, 0, -3145641, 8, 0, -3145640, 8, 0, -3145639, 8, 0, -3145638, 8, 0, -3145637, 8, 0, -3145636, 8, 0, -3145635, 8, 0, -3145634, 8, 0, -3145633, 8, 0, -3145632, 8, 0, -3145631, 8, 0, -3145630, 8, 0, -3145629, 8, 0, -3145628, 8, 0, -3145627, 8, 0, -3145626, 8, 0, -3145625, 8, 0, -3145624, 8, 0, -3145623, 8, 0, -3145622, 8, 0, -3145621, 9, 0, -3145620, 2, 0, -3080125, 3, 0, -3080124, 8, 0, -3080123, 8, 0, -3080122, 8, 0, -3080121, 8, 0, -3080120, 8, 0, -3080119, 8, 0, -3080118, 8, 0, -3080117, 8, 0, -3080116, 8, 0, -3080115, 8, 0, -3080114, 8, 0, -3080113, 8, 0, -3080112, 8, 0, -3080111, 8, 0, -3080110, 8, 0, -3080109, 8, 0, -3080108, 8, 0, -3080107, 8, 0, -3080106, 8, 0, -3080105, 8, 0, -3080104, 8, 0, -3080103, 8, 0, -3080102, 8, 0, -3080101, 8, 0, -3080100, 8, 0, -3080099, 8, 0, -3080098, 8, 0, -3080097, 8, 0, -3080096, 8, 0, -3080095, 8, 0, -3080094, 8, 0, -3080093, 8, 0, -3080092, 8, 0, -3080091, 8, 0, -3080090, 8, 0, -3080089, 8, 0, -3080088, 8, 0, -3080087, 8, 0, -3080086, 8, 0, -3080085, 8, 0, -3080084, 9, 0, -3080083, 2, 0, -3014590, 0, 0, -3014589, 12, 0, -3014588, 8, 0, -3014587, 8, 0, -3014586, 8, 0, -3014585, 8, 0, -3014584, 8, 0, -3014583, 8, 0, -3014582, 8, 0, -3014581, 8, 0, -3014580, 8, 0, -3014579, 8, 0, -3014578, 8, 0, -3014577, 8, 0, -3014576, 8, 0, -3014575, 8, 0, -3014574, 8, 0, -3014573, 8, 0, -3014572, 8, 0, -3014571, 8, 0, -3014570, 8, 0, -3014569, 8, 0, -3014568, 8, 0, -3014567, 8, 0, -3014566, 8, 0, -3014565, 8, 0, -3014564, 8, 0, -3014563, 8, 0, -3014562, 8, 0, -3014561, 8, 0, -3014560, 8, 0, -3014559, 8, 0, -3014558, 8, 0, -3014557, 8, 0, -3014556, 8, 0, -3014555, 8, 0, -3014554, 8, 0, -3014553, 8, 0, -3014552, 8, 0, -3014551, 8, 0, -3014550, 8, 0, -3014549, 8, 0, -3014548, 8, 0, -3014547, 4, 0, -2949054, 3, 0, -2949053, 8, 0, -2949052, 8, 0, -2949051, 8, 0, -2949050, 8, 0, -2949049, 8, 0, -2949048, 8, 0, -2949047, 8, 0, -2949046, 8, 0, -2949045, 8, 0, -2949044, 8, 0, -2949043, 8, 0, -2949042, 8, 0, -2949041, 8, 0, -2949040, 8, 0, -2949039, 8, 0, -2949038, 8, 0, -2949037, 8, 0, -2949036, 8, 0, -2949035, 8, 0, -2949034, 8, 0, -2949033, 8, 0, -2949032, 8, 0, -2949031, 8, 0, -2949030, 8, 0, -2949029, 8, 0, -2949028, 8, 0, -2949027, 8, 0, -2949026, 8, 0, -2949025, 8, 0, -2949024, 8, 0, -2949023, 8, 0, -2949022, 8, 0, -2949021, 8, 0, -2949020, 8, 0, -2949019, 8, 0, -2949018, 8, 0, -2949017, 8, 0, -2949016, 8, 0, -2949015, 8, 0, -2949014, 8, 0, -2949013, 8, 0, -2949012, 8, 0, -2949011, 4, 0, -2883518, 3, 0, -2883517, 8, 0, -2883516, 8, 0, -2883515, 8, 0, -2883514, 8, 0, -2883513, 8, 0, -2883512, 8, 0, -2883511, 8, 0, -2883510, 8, 0, -2883509, 8, 0, -2883508, 8, 0, -2883507, 8, 0, -2883506, 8, 0, -2883505, 8, 0, -2883504, 8, 0, -2883503, 8, 0, -2883502, 8, 0, -2883501, 8, 0, -2883500, 8, 0, -2883499, 8, 0, -2883498, 8, 0, -2883497, 8, 0, -2883496, 8, 0, -2883495, 8, 0, -2883494, 8, 0, -2883493, 8, 0, -2883492, 8, 0, -2883491, 8, 0, -2883490, 8, 0, -2883489, 8, 0, -2883488, 8, 0, -2883487, 8, 0, -2883486, 8, 0, -2883485, 8, 0, -2883484, 8, 0, -2883483, 8, 0, -2883482, 8, 0, -2883481, 8, 0, -2883480, 8, 0, -2883479, 8, 0, -2883478, 8, 0, -2883477, 8, 0, -2883476, 8, 0, -2883475, 4, 0, -2817982, 5, 0, -2817981, 11, 0, -2817980, 8, 0, -2817979, 8, 0, -2817978, 8, 0, -2817977, 8, 0, -2817976, 8, 0, -2817975, 8, 0, -2817974, 8, 0, -2817973, 8, 0, -2817972, 8, 0, -2817971, 8, 0, -2817970, 8, 0, -2817969, 8, 0, -2817968, 8, 0, -2817967, 8, 0, -2817966, 8, 0, -2817965, 8, 0, -2817964, 8, 0, -2817963, 8, 0, -2817962, 8, 0, -2817961, 8, 0, -2817960, 8, 0, -2817959, 8, 0, -2817958, 8, 0, -2817957, 8, 0, -2817956, 8, 0, -2817955, 8, 0, -2817954, 8, 0, -2817953, 8, 0, -2817952, 8, 0, -2817951, 8, 0, -2817950, 8, 0, -2817949, 8, 0, -2817948, 8, 0, -2817947, 8, 0, -2817946, 8, 0, -2817945, 8, 0, -2817944, 8, 0, -2817943, 8, 0, -2817942, 8, 0, -2817941, 8, 0, -2817940, 8, 0, -2817939, 4, 0, -2752445, 3, 0, -2752444, 8, 0, -2752443, 8, 0, -2752442, 8, 0, -2752441, 8, 0, -2752440, 8, 0, -2752439, 8, 0, -2752438, 8, 0, -2752437, 8, 0, -2752436, 8, 0, -2752435, 8, 0, -2752434, 8, 0, -2752433, 8, 0, -2752432, 8, 0, -2752431, 8, 0, -2752430, 8, 0, -2752429, 8, 0, -2752428, 8, 0, -2752427, 8, 0, -2752426, 8, 0, -2752425, 8, 0, -2752424, 8, 0, -2752423, 8, 0, -2752422, 8, 0, -2752421, 8, 0, -2752420, 8, 0, -2752419, 8, 0, -2752418, 8, 0, -2752417, 8, 0, -2752416, 8, 0, -2752415, 8, 0, -2752414, 8, 0, -2752413, 8, 0, -2752412, 8, 0, -2752411, 8, 0, -2752410, 8, 0, -2752409, 8, 0, -2752408, 8, 0, -2752407, 8, 0, -2752406, 8, 0, -2752405, 8, 0, -2752404, 8, 0, -2752403, 4, 0, -2686909, 5, 0, -2686908, 11, 0, -2686907, 8, 0, -2686906, 8, 0, -2686905, 8, 0, -2686904, 8, 0, -2686903, 8, 0, -2686902, 8, 0, -2686901, 8, 0, -2686900, 8, 0, -2686899, 8, 0, -2686898, 8, 0, -2686897, 8, 0, -2686896, 8, 0, -2686895, 8, 0, -2686894, 8, 0, -2686893, 8, 0, -2686892, 8, 0, -2686891, 8, 0, -2686890, 8, 0, -2686889, 8, 0, -2686888, 8, 0, -2686887, 8, 0, -2686886, 8, 0, -2686885, 8, 0, -2686884, 8, 0, -2686883, 8, 0, -2686882, 8, 0, -2686881, 8, 0, -2686880, 8, 0, -2686879, 8, 0, -2686878, 8, 0, -2686877, 8, 0, -2686876, 8, 0, -2686875, 8, 0, -2686874, 8, 0, -2686873, 8, 0, -2686872, 8, 0, -2686871, 8, 0, -2686870, 8, 0, -2686869, 8, 0, -2686868, 10, 0, -2686867, 7, 0, -2621372, 5, 0, -2621371, 11, 0, -2621370, 8, 0, -2621369, 8, 0, -2621368, 8, 0, -2621367, 8, 0, -2621366, 8, 0, -2621365, 8, 0, -2621364, 8, 0, -2621363, 8, 0, -2621362, 8, 0, -2621361, 8, 0, -2621360, 8, 0, -2621359, 8, 0, -2621358, 8, 0, -2621357, 8, 0, -2621356, 8, 0, -2621355, 8, 0, -2621354, 8, 0, -2621353, 8, 0, -2621352, 8, 0, -2621351, 8, 0, -2621350, 8, 0, -2621349, 8, 0, -2621348, 8, 0, -2621347, 8, 0, -2621346, 8, 0, -2621345, 8, 0, -2621344, 8, 0, -2621343, 8, 0, -2621342, 8, 0, -2621341, 8, 0, -2621340, 8, 0, -2621339, 8, 0, -2621338, 8, 0, -2621337, 8, 0, -2621336, 8, 0, -2621335, 8, 0, -2621334, 8, 0, -2621333, 8, 0, -2621332, 4, 0, -2555835, 5, 0, -2555834, 11, 0, -2555833, 8, 0, -2555832, 8, 0, -2555831, 8, 0, -2555830, 8, 0, -2555829, 8, 0, -2555828, 8, 0, -2555827, 8, 0, -2555826, 8, 0, -2555825, 8, 0, -2555824, 8, 0, -2555823, 8, 0, -2555822, 8, 0, -2555821, 8, 0, -2555820, 8, 0, -2555819, 8, 0, -2555818, 8, 0, -2555817, 8, 0, -2555816, 8, 0, -2555815, 8, 0, -2555814, 8, 0, -2555813, 8, 0, -2555812, 8, 0, -2555811, 8, 0, -2555810, 8, 0, -2555809, 8, 0, -2555808, 8, 0, -2555807, 8, 0, -2555806, 8, 0, -2555805, 8, 0, -2555804, 8, 0, -2555803, 8, 0, -2555802, 8, 0, -2555801, 8, 0, -2555800, 8, 0, -2555799, 8, 0, -2555798, 10, 0, -2555797, 6, 0, -2555796, 7, 0, -2490298, 5, 0, -2490297, 11, 0, -2490296, 8, 0, -2490295, 8, 0, -2490294, 8, 0, -2490293, 8, 0, -2490292, 8, 0, -2490291, 8, 0, -2490290, 8, 0, -2490289, 8, 0, -2490288, 8, 0, -2490287, 8, 0, -2490286, 8, 0, -2490285, 8, 0, -2490284, 8, 0, -2490283, 8, 0, -2490282, 8, 0, -2490281, 8, 0, -2490280, 8, 0, -2490279, 8, 0, -2490278, 8, 0, -2490277, 8, 0, -2490276, 8, 0, -2490275, 8, 0, -2490274, 8, 0, -2490273, 8, 0, -2490272, 8, 0, -2490271, 8, 0, -2490270, 8, 0, -2490269, 8, 0, -2490268, 8, 0, -2490267, 8, 0, -2490266, 8, 0, -2490265, 8, 0, -2490264, 10, 0, -2490263, 6, 0, -2490262, 7, 0, -2424761, 5, 0, -2424760, 6, 0, -2424759, 11, 0, -2424758, 8, 0, -2424757, 8, 0, -2424756, 8, 0, -2424755, 8, 0, -2424754, 8, 0, -2424753, 8, 0, -2424752, 8, 0, -2424751, 8, 0, -2424750, 8, 0, -2424749, 8, 0, -2424748, 8, 0, -2424747, 8, 0, -2424746, 8, 0, -2424745, 8, 0, -2424744, 8, 0, -2424743, 8, 0, -2424742, 8, 0, -2424741, 8, 0, -2424740, 8, 0, -2424739, 8, 0, -2424738, 8, 0, -2424737, 8, 0, -2424736, 8, 0, -2424735, 8, 0, -2424734, 8, 0, -2424733, 8, 0, -2424732, 8, 0, -2424731, 8, 0, -2424730, 10, 0, -2424729, 6, 0, -2424728, 7, 0, -2359223, 5, 0, -2359222, 6, 0, -2359221, 11, 0, -2359220, 8, 0, -2359219, 8, 0, -2359218, 8, 0, -2359217, 8, 0, -2359216, 8, 0, -2359215, 8, 0, -2359214, 8, 0, -2359213, 8, 0, -2359212, 8, 0, -2359211, 8, 0, -2359210, 8, 0, -2359209, 8, 0, -2359208, 8, 0, -2359207, 8, 0, -2359206, 8, 0, -2359205, 8, 0, -2359204, 8, 0, -2359203, 8, 0, -2359202, 8, 0, -2359201, 8, 0, -2359200, 8, 0, -2359199, 8, 0, -2359198, 8, 0, -2359197, 10, 0, -2359196, 6, 0, -2359195, 6, 0, -2359194, 7, 0, -2293685, 5, 0, -2293684, 6, 0, -2293683, 6, 0, -2293682, 11, 0, -2293681, 8, 0, -2293680, 8, 0, -2293679, 8, 0, -2293678, 8, 0, -2293677, 8, 0, -2293676, 8, 0, -2293675, 8, 0, -2293674, 8, 0, -2293673, 8, 0, -2293672, 8, 0, -2293671, 8, 0, -2293670, 8, 0, -2293669, 8, 0, -2293668, 8, 0, -2293667, 8, 0, -2293666, 8, 0, -2293665, 8, 0, -2293664, 8, 0, -2293663, 10, 0, -2293662, 6, 0, -2293661, 7, 0, -2228146, 5, 0, -2228145, 6, 0, -2228144, 6, 0, -2228143, 6, 0, -2228142, 11, 0, -2228141, 8, 0, -2228140, 8, 0, -2228139, 8, 0, -2228138, 8, 0, -2228137, 8, 0, -2228136, 8, 0, -2228135, 8, 0, -2228134, 8, 0, -2228133, 8, 0, -2228132, 10, 0, -2228131, 6, 0, -2228130, 6, 0, -2228129, 6, 0, -2228128, 6, 0, -2228127, 7, 0, -2162606, 3, 0, -2162605, 8, 0, -2162604, 8, 0, -2162603, 10, 0, -2162602, 6, 0, -2162601, 6, 0, -2162600, 6, 0, -2162599, 6, 0, -2162598, 6, 0, -2162597, 6, 0, -2162596, 7, 0, -2097070, 3, 0, -2097069, 8, 0, -2097068, 8, 0, -2097067, 4, 0, -2031534, 3, 0, -2031533, 8, 0, -2031532, 8, 0, -2031531, 4, 0, -1965998, 3, 0, -1965997, 8, 0, -1965996, 8, 0, -1965995, 4, 0, -1900462, 3, 0, -1900461, 8, 0, -1900460, 8, 0, -1900459, 4, 0, -1834926, 3, 0, -1834925, 8, 0, -1834924, 8, 0, -1834923, 4, 0 )
script = ExtResource( 2 )

[node name="Player_detector" parent="." instance=ExtResource( 4 )]
position = Vector2( 1344, -485 )

[node name="CollisionShape2D" parent="Player_detector" index="0"]
position = Vector2( 0, 2 )

[node name="Detect_close_doors" type="Area2D" parent="."]
position = Vector2( 1352, -589 )
collision_layer = 8
monitorable = false

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Detect_close_doors"]
polygon = PoolVector2Array( -20, 45, -26, 46, -20, 46, 9, 45, 24, 61, 9, 44 )

[node name="Positions" type="Container" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Spawn0" type="Position2D" parent="Positions"]
position = Vector2( 1114, -707 )

[node name="Spawn1" type="Position2D" parent="Positions"]
position = Vector2( 1240, -825 )

[node name="Spawn2" type="Position2D" parent="Positions"]
position = Vector2( 1543, -825 )

[node name="Spawn3" type="Position2D" parent="Positions"]
position = Vector2( 1722, -707 )

[node name="Doors" type="Container" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Doors_front" parent="Doors" instance=ExtResource( 3 )]
position = Vector2( 1335, -520 )

[node name="Doors_front2" parent="Doors" instance=ExtResource( 3 )]
position = Vector2( 1352, -520 )

[editable path="Player_detector"]
